<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:adjustViewBounds="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/main_photo"
            android:scaleType="fitCenter"
            android:src="@drawable/my_photo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="28dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/image_of_header_1"
                android:src="@drawable/android" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/heading_1"
                android:textSize="16sp" />
        </LinearLayout>





        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/description" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_a_message"
            android:inputType="text"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="50dp"
            android:paddingTop="16dp"
            android:id="@+id/edit_text"
            tools:ignore="Autofill" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/send_message"
            android:textColor="@color/colorRed"
            android:textSize="16sp"
            android:id="@+id/send_message"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:src="@drawable/telegram_icon"
                android:id="@+id/telegram"
                android:contentDescription="@string/telegram_icon" />


            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:src="@drawable/instagram_icon"
                android:id="@+id/instagram"
                android:contentDescription="@string/instagram_icon" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:src="@drawable/vk_icon"
                android:id="@+id/vk"
                android:contentDescription="@string/vk_icon" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>

